--- a/template_finance.tex
+++ b/template_finance.tex
@@ -45,83 +45,83 @@
     \begin{tabularx}{\linewidth}{@{} C @{}}
     \Huge\textbf !name \\[6pt]
     \\
-    Address: {{address}}
+    Address: !address
     
-    Mobile: {{phone}}
-    Email: {{email}}
+    Mobile: !phone
+    Email: !email
     \end{tabularx}
     
     % Education
     \section{EDUCATION}
-    \textbf {{university1}} \hfill \textbf {{locationus1}} \\[-3ex]
+    \textbf !university1 \hfill \textbf !locationus1 \\[-3ex]
     \begin{itemize}[label={\large\textbullet}, left=0pt, itemsep=0.5ex, parsep=0.5ex]
-        \item {{majorus1}} \hfill {{timeus1}} \\[-3ex]
+        \item !majorus1 \hfill !timeus1 \\[-3ex]
     \end{itemize}
     \begin{itemize}[label=$\circ$,itemsep=0.5ex,parsep=0.5ex]
-        \item Courses: {{courses1}}
-        \item GPA: {{gpa1}}
-        \item {{clubs1}}
+        \item Courses: !courses1
+        \item GPA: !gpa1
+        \item !clubs1
     \end{itemize}
     
-    \textbf {{university2}} \hfill \textbf {{locationus2}} \\[-3ex]
+    \textbf !university2 \hfill \textbf !locationus2 \\[-3ex]
     \begin{itemize}[label={\large\textbullet}, left=0pt, itemsep=0.5ex, parsep=0.5ex]
-        \item {{majorus2}} \hfill  {{timeus2}} \\[-3ex]
+        \item !majorus2 \hfill  !timeus2 \\[-3ex]
     \end{itemize}
     \begin{itemize}[label=$\circ$,itemsep=0.5ex,parsep=0.5ex]
-        \item Courses: {{courses2}}
-        \item GPA: {{gpa2}}
-        \item {{clubs2}}
+        \item Courses: !courses2
+        \item GPA: !gpa2
+        \item !clubs2
     \end{itemize}
     
     %Professional Experience
     \section{PROFESSIONAL EXPERIENCE}
-        \textbf {{experience1}} \hfill \textbf {{locatione1}} \\[-3ex]
+        \textbf !experience1 \hfill \textbf !locatione1 \\[-3ex]
     \begin{itemize}[label={\large\textbullet}, left=0pt, itemsep=0.5ex, parsep=0.5ex]
-        \item \textit {{position1}} \hfill  {{timee1}} \\[-3ex]
+        \item \textit !position1 \hfill  !timee1 \\[-3ex]
     
     \end{itemize}
     \begin{itemize}[label=$\circ$,itemsep=0.5ex,parsep=0.5ex]
-        \item {{task11}}
-        \item {{task12}}
-        \item {{task13}}
+        \item !task11
+        \item !task12
+        \item !task13
     \end{itemize}
     
-        \textbf {{experience2}} \hfill \textbf {{locatione2}} \\[-3ex]
-    \begin{itemize}[label={{\large\textbullet}}, left=0pt, itemsep=0.5ex, parsep=0.5ex]
-        \item \textit{{position2}} \hfill  {{timee2}} \\[-3ex]
-    
-    \end{itemize}
-    \begin{itemize}[label=$\circ$,itemsep=0.5ex,parsep=0.5ex]
-        \item {{task21}}
-        \item {{task22}}
-        \item {{task23}}
-    \end{itemize}
-    
-        \textbf {{experience3}} \hfill \textbf {{locatione3}} \\[-3ex]
+        \textbf !experience2 \hfill \textbf !locatione2 \\[-3ex]
     \begin{itemize}[label={\large\textbullet}, left=0pt, itemsep=0.5ex, parsep=0.5ex]
-        \item \textit {{position3}} \hfill  {{timee3}} \\[-3ex]
+        \item \textit!position2 \hfill  !timee2 \\[-3ex]
     
     \end{itemize}
     \begin{itemize}[label=$\circ$,itemsep=0.5ex,parsep=0.5ex]
-        \item {{task31}}
-        \item {{task32}}
-        \item {{task33}}
+        \item !task21
+        \item !task22
+        \item !task23
     \end{itemize}
     
-    %Extracurriculat Activities / Engagement
+        \textbf !experience3 \hfill \textbf !locatione3 \\[-3ex]
+    \begin{itemize}[label={\large\textbullet}, left=0pt, itemsep=0.5ex, parsep=0.5ex]
+        \item \textit !position3 \hfill  !timee3 \\[-3ex]
+    
+    \end{itemize}
+    \begin{itemize}[label=$\circ$,itemsep=0.5ex,parsep=0.5ex]
+        \item !task31
+        \item !task32
+        \item !task33
+    \end{itemize}
+    
+    %Extracurricular Activities / Engagement
     \section{EXTRACURRICULAR ACTIVITIES / ENGAGEMENT}
     \begin{itemize}[label={\large\textbullet}, left=0pt, itemsep=0.5ex, parsep=0.5ex]
-        \item Extracurricular: {{extracurricular1}}
-        \item Additional Education: {{additionaleducation1}}
-        \item Certificate \& Achievements: {{certificates1}}
+        \item Extracurricular: !extracurricular1
+        \item Additional Education: !additionaleducation1
+        \item Certificate \& Achievements: !certificates1
     \end{itemize}
     
     % Skills & Interest
     \section{SKILLS \& INTEREST}
-    \begin{itemize}[label={{\large\textbullet}}, left=0pt, itemsep=0.5ex, parsep=0.5ex]
-        \item Languages: {{languages1}}
-        \item Computer: {{computer1}}
-        \item Interests: {{interests1}}
-    \end{{itemize}}
+    \begin{itemize}[label={\large\textbullet}, left=0pt, itemsep=0.5ex, parsep=0.5ex]
+        \item Languages: !languages1
+        \item Computer: !computer1
+        \item Interests: !interests1
+    \end{itemize}
     
-    \end{{document}}
+    \end{document}
